# crunch-koskalak

./: .gitignore  CLAUDE.md  README.md  crunch-gadget-stack-roadmap.md  deep-research-report.md
agent/: README.md  sage_capabilities.py  sage_instructions.py
docs/: architecture.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  main.c
firmware/main/audio/: audio_pipeline.c  audio_pipeline.h
firmware/main/device/: device_state.c  device_state.h
firmware/main/display/: display_manager.c  display_manager.h
firmware/main/imu/: imu_driver.c  imu_driver.h
firmware/main/led/: led_driver.c  led_driver.h
firmware/main/motion/: balance_controller.c  balance_controller.h  gait_patterns.c  motion_engine.c  motion_engine.h
firmware/main/network/: mqtt_client.c  network_manager.c  network_manager.h  ws_client.c
firmware/main/power/: battery_monitor.c  battery_monitor.h
firmware/main/touch/: touch_driver.c  touch_driver.h
server-gadget/: .env.example  package.json
server-gadget/src/: config.ts  index.ts
server-gadget/src/middleware/: device-auth.middleware.ts
server-gadget/src/routes/: device.routes.ts  ota.routes.ts  voice.routes.ts  webhook.routes.ts
server-gadget/src/services/: device-registry.service.ts  event-fanout.service.ts  ota.service.ts  voice-proxy.service.ts
server-gadget/src/types/: index.ts
