idf_component_register(
    SRCS
        "main.c"
        "device/device_state.c"
        "network/network_manager.c"
        "network/mqtt_client.c"
        "network/ws_client.c"
        "audio/audio_pipeline.c"
        "display/display_manager.c"
        "motion/motion_engine.c"
        "motion/gait_patterns.c"
        "motion/balance_controller.c"
        "imu/imu_driver.c"
        "touch/touch_driver.c"
        "led/led_driver.c"
        "power/battery_monitor.c"
    INCLUDE_DIRS
        "."
        "device"
        "network"
        "audio"
        "display"
        "motion"
        "imu"
        "touch"
        "led"
        "power"
    REQUIRES
        driver
        esp_wifi
        esp_event
        esp_adc
        nvs_flash
        mqtt
        esp_http_client
        esp_https_ota
        json
)
